<resources>
    <string name="app_name" translatable="false">AGBank ✅</string>
    <string name="label_debitar">DEBITAR</string>
    <string name="label_transferir">TRANSFERIR</string>
    <string name="label_creditar">CREDITAR</string>
    <string name="btn_inserir">Inserir</string>
    <string name="msg_cliente_adicionado">Cliente adicionado(a) com sucesso</string>
    <string name="msg_minimo_caracteres">Digite um nome com no mínimo %d caracteres</string>
    <string name="msg_cpf_valido">Digite um CPF válido</string>
    <string name="label_nome">Nome</string>
    <string name="campo_nome">Digite um nome</string>
    <string name="label_cpf">CPF</string>
    <string name="campo_cpf">Digite um CPF</string>
    <string name="btn_atualizar">Atualizar</string>
    <string name="btn_remover">Remover</string>
    <string name="text_btn_atualizar">Atualizar</string>
    <string name="dialog_titulo_atualizar_cliente">ATUALIZAR CLIENTE</string>
    <string name="dialog_msg_atualizar_cliente_de_cpf">Tem certeza que deseja atualizar o(a) cliente %s ?</string>
    <string name="dialog_btn_negativo_cancelar">CANCELAR</string>
    <string name="dialog_btn_positivo_atualizar_cliente">SIM, ATUALIZAR CLIENTE</string>
    <string name="msg_cliente_de_cpf_x_atualizado_sucesso">O(A) cliente %s foi atualizado(a) com sucesso</string>
    <string name="dialog_titulo_excluir_cliente">EXCLUIR CLIENTE</string>
    <string name="dialog_msg_excluir_cliente_de_cpf_x">Tem certeza que deseja excluir o(a) cliente %s ?</string>
    <string name="dialog_obs_contas_serao_excluidas">\n\nObs.: Todas as contas associadas a este(a) cliente também serão excluídas</string>
    <string name="dialog_msg_positiva_sim_excluir_cliente">SIM, EXCLUIR CLIENTE</string>
    <string name="msg_cliente_de_cpf_x_excluido_sucesso">Cliente %s excluído(a) com sucesso</string>
    <string name="msg_conta_add_sucesso">Conta adicionada com sucesso</string>
    <string name="msg_digite_saldo_com_numeros">Digite um saldo com números</string>
    <string name="msg_necessario_cadastrar_cliente_com_cpf">É necessário cadastrar um cliente com o CPF informado</string>
    <string name="msg_conta_ja_existe_digite_novo_numero">Conta já existe. Digite um novo número</string>
    <string name="msg_digite_numero_conta">Digite um número para a conta</string>
    <string name="txt_viewHolder_conta_saldo_atual">%s | Saldo atual: %s</string>
    <string name="txt_viewHolder_cpf_cliente">CPF: %s</string>
    <string name="dialog_titulo_atualizar_conta">ATUALIZAR CONTA</string>
    <string name="dialog_msg_certeza_atualizar_conta">Tem certeza que deseja atualizar a conta %s ?</string>
    <string name="dialog_btn_positivo_atualizar_conta">SIM, ATUALIZAR CONTA</string>
    <string name="dialog_msg_sucesso_conta_atualizada">A conta %s foi atualizada com sucesso</string>
    <string name="dialog_titulo_excluir_conta">EXCLUIR CONTA</string>
    <string name="dialog_msg_certeza_excluir_conta">Tem certeza que deseja excluir a conta %s ?</string>
    <string name="dialog_msg_positiva_sim_excluir_conta">SIM, EXCLUIR CONTA</string>
    <string name="msg_sucesso_conta_excluida">A Conta %s foi excluída com sucesso</string>
    <string name="msg_sucesso_transferencia">Transferência realizada com sucesso!</string>
    <string name="msg_saldo_insuficiente">Saldo insuficiente</string>
    <string name="msg_digite_valor_maior_zero">Digite um valor maior que zero</string>
    <string name="msg_digite_numeros_contas_diferentes">Digite números de contas diferentes para efetuar uma transferência</string>
    <string name="msg_conta_destino_nao_encontrada">Conta de destino não encontrada</string>
    <string name="msg_conta_origem_nao_encontrada">Conta de origem não encontrada</string>
    <string name="msg_sucesso_credito">Crédito realizado com sucesso!</string>
    <string name="msg_conta_nao_encontrada">Conta não encontrada</string>
    <string name="msg_sucesso_debito">Débito realizado com sucesso!</string>
    <string name="btn_creditar">Creditar</string>
    <string name="txt_placeholder_creditado"> creditado</string>
    <string name="txt_placeholder_debitado"> debitado</string>
    <string name="btn_debitar">Debitar</string>
    <string name="txt_placeholder_transferido"> transferido</string>
    <string name="btn_transferir">Transferir</string>
    <string name="msg_digite_termo_pesquisar">Digite algum termo para pesquisar</string>
    <string name="msg_nenhuma_conta_encontrada">Nenhuma conta encontrada</string>
    <string name="placeholder_digite_numero_conta">Digite o número da conta</string>
    <string name="label_numero_da_conta">Número da Conta</string>
    <string name="label_saldo">Saldo</string>
    <string name="placeholder_digite_o_saldo">Digite o saldo</string>
    <string name="btn_adicionar_cliente">Adicionar Cliente</string>
    <string name="btn_adicionar_conta">Adicionar Conta</string>
    <string name="btn_contas">Contas</string>
    <string name="btn_pesquisar">Pesquisar</string>
    <string name="btn_clientes">Clientes</string>
    <string name="txt_total_no_banco">Total no Banco:</string>
    <string name="label_numero_da_conta_origem">Número da Conta Origem</string>
    <string name="label_numero_da_conta_destino">Número da Conta Destino</string>
    <string name="label_valor">Valor</string>
    <string name="placeholder_digite_o_valor_a_ser">Digite o valor a ser&#160;</string>
    <string name="btn_realizar_operacao">Realizar Operação</string>
    <string name="radio_nome">Nome</string>
    <string name="radio_cpf">CPF</string>
    <string name="radio_numero_da_conta">Número da Conta</string>
</resources>