<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnContas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_contas"
        app:icon="@drawable/baseline_switch_account_24"
        android:layout_margin="3dp"
        android:textSize="24sp">
    </Button>
    <Button
        android:id="@+id/btnTransferir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_transferir"
        app:icon="@drawable/baseline_currency_exchange_24"
        android:layout_margin="3dp"
        android:textSize="24sp">
    </Button>
    <Button
        android:id="@+id/btnDebitar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_debitar"
        app:icon="@drawable/baseline_output_24"
        android:layout_margin="3dp"
        android:textSize="24sp">
    </Button>
    <Button
        android:id="@+id/btnCreditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_creditar"
        app:icon="@drawable/baseline_input_24"
        android:layout_margin="3dp"
        android:textSize="24sp">
    </Button>

    <Button
        android:id="@+id/btnClientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/btn_clientes"
        app:icon="@drawable/baseline_groups_24"
        android:textSize="24sp">
    </Button>

    <Button
        android:id="@+id/btnPesquisar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_pesquisar"
        android:layout_margin="3dp"
        app:icon="@drawable/baseline_search_24"
        android:textSize="24sp">
    </Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/txt_total_no_banco"
        android:textSize="26sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/totalDinheiroBanco"
        android:textSize="30sp" />


</LinearLayout>