<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="7dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/pesquisa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/msg_digite_termo_pesquisar"
        app:icon="@android:drawable/ic_menu_search"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tipoPesquisa"
        android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_margin="3dp"
                android:id="@+id/peloNomeCliente"
                android:text="@string/radio_nome" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:id="@+id/peloCPFcliente"
                android:text="@string/radio_cpf" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:id="@+id/peloNumeroConta"
                android:text="@string/radio_numero_da_conta" />
    </RadioGroup>


    <Button
        android:id="@+id/btn_Pesquisar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/btn_pesquisar"
        android:layout_gravity="center"
        app:icon="@drawable/baseline_search_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResultado"
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>