<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipoOperacao"
        android:text="TIPO DA OPERAÇÃO"
        android:fontFamily="sans-serif-medium"
        android:textSize="32sp"
        android:layout_gravity="center"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_numero_da_conta_origem"
        android:textSize="24sp"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/numeroContaOrigem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:inputType="number"
        android:fontFamily="sans-serif-light"
        android:hint="@string/placeholder_digite_numero_conta"
        android:minHeight="48dp"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelContaDestino"
        android:text="@string/label_numero_da_conta_destino"
        android:textSize="24sp"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/numeroContaDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:inputType="number"
        android:fontFamily="sans-serif-light"
        android:hint="@string/placeholder_digite_numero_conta"
        android:minHeight="48dp"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_valor"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_margin="5dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:inputType="numberDecimal"
        android:fontFamily="sans-serif-light"
        android:hint="@string/placeholder_digite_o_valor_a_ser"
        android:minHeight="48dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnOperacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/btn_realizar_operacao"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"/>

</LinearLayout>